--- a/towns.html
+++ b/towns.html
@@ -24,6 +24,10 @@
             <input type="text" id="townNameForAdd" />
             <button id="btnAdd">Add</button>
         </div>
+        <div>
+            <button id="btnShuffle">Shuffle</button>
+        </div>
+        
         <div id="result"></div>
     </body>
 </html>
